<resources>
    <string name="app_name">BankClient</string>
    <string name="user_name">%1$s %2$s</string>
    <string name="user_icon_avatar">User icon avatar</string>
    <string name="account_name">Account name</string>
    <string name="created_on">Created on</string>
    <string name="owner">Owner</string>
    <string name="born">Born</string>
    <string name="cards">Cards</string>
    <string name="card_expires">Expires %1$02d / %2$02d</string>
    <string name="expired">expired</string>
    <string name="account_info">Account info</string>
    <string name="owner_info">Owner info</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="expiration_month">Expiration month</string>
    <string name="expiration_year">Expiration year</string>
    <string name="add_card">Add card</string>
    <string name="save">Save</string>
    <string name="updated">Updated</string>
    <string name="network_error">Network error</string>
    <string name="unknown_error">Unknown error</string>
    <string name="retry">Retry</string>
    <string name="saving_dialog_message">Saving. Please wait…</string>
    <string name="saved">Saved</string>
    <string name="deleting_account_dialog_message">Deleting account. Please wait…</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="required_field_error">Required</string>
    <string name="new_card_dialog_instructions">Enter expiration date for new card. Card number will be generated automatically.</string>
    <string name="deleted">Deleted</string>
    <string name="server_address">Server address</string>
    <string name="settings">Settings</string>
    <string name="port">Port</string>
</resources>
