<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="androidx.lifecycle.LiveData" />

        <variable
            name="account"
            type="LiveData&lt;sk.andrejmik.bankclient.objects.Account>" />
    </data>

    <LinearLayout
        android:id="@+id/root_new_account_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical"
        tools:context=".fragments.NewAccountFragment">

        <TextView
            style="@style/section_header"
            android:text="@string/account_info" />

        <com.google.android.material.textfield.TextInputLayout style="@style/textInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/account_name"
                android:text="@={account.name}" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            style="@style/section_header"
            android:text="@string/owner_info" />

        <com.google.android.material.textfield.TextInputLayout style="@style/textInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:text="@={account.owner.name}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout style="@style/textInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/surname"
                android:text="@={account.owner.surname}" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            style="@style/section_header"
            android:text="@string/cards" />

        <ListView
            android:id="@+id/listview_new_cards"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/button_new_account_add_card"
            style="@style/primary_button"
            android:text="@string/add_card" />

    </LinearLayout>
</layout>