<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical"
        tools:context=".fragments.SettingsFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edittext_server_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:autofillHints="@string/server_address"
                android:inputType="textUri"
                android:textSize="18sp"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/edittext_server_port"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="@string/port"
                android:inputType="number"
                android:textSize="18sp"
                tools:ignore="LabelFor" />
        </LinearLayout>

        <Button
            android:id="@+id/button_settings_save"
            style="@style/primary_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save" />
    </LinearLayout>
</layout>