<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="card"
            type="sk.andrejmik.bankclient.objects.Card" />

        <import type="sk.andrejmik.bankclient.utils.BindingConverter" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical"
        tools:context=".fragments.dialogs.NewCardFragmentDialog">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_card_dialog_instructions" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/textInputLayout"
                android:layout_width="0dp"
                android:layout_weight="1"
                app:error="@{card.expirationMonth == null || card.expirationMonth &lt; 1 ? @string/required_field_error : null}"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/expiration_month"
                    android:text="@={BindingConverter.convertNullIntToString(card.expirationMonth)}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/textInputLayout"
                android:layout_width="0dp"
                android:layout_weight="1"
                app:error="@{card.expirationYear == null || card.expirationYear &lt; 1 ? @string/required_field_error : null}"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/expiration_year"
                    android:text="@={BindingConverter.convertNullIntToString(card.expirationYear)}" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </LinearLayout>
</layout>